--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@hapi/joi": "15.x.x",
     "dotenv": "^8.2.0",
     "knex": "^0.19.4",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "uuid": "^3.3.3"
   }
 }
